fix: update endpoints
